src/objects/TechnicalOrderrPoduct__c.object
<CustomObject>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <label>折扣额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountExchangeRate__c</fullName>
        <label>折本汇率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>InventoryCommonName__c</fullName>
        <label>存货通用名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KitConfiguration__c</fullName>
        <label>套件配置</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalCurrency1__c</fullName>
        <label>本币无税单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LocalCurrencyTax__c</fullName>
        <label>本币含税净价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LocalCurrency__c</fullName>
        <label>本币含税单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MainUnit__c</fullName>
        <label>主单位</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialCoding__c</fullName>
        <label>物料编码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialName__c</fullName>
        <label>物料名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>订单</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>Order123</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginalCode__c</fullName>
        <label>原厂编码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalStockCode__c</fullName>
        <label>原存货编码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductionDate__c</fullName>
        <label>生产日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>项目</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivingCountry__c</fullName>
        <label>收货国家/地区</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationNumber__c</fullName>
        <label>注册证号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <label>产品批号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <label>发货国家/地区</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SparePartName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件名称</label>
        <referenceTo>Product3__c</referenceTo>
        <relationshipName>SparePartName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode__c</fullName>
        <label>税码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxDeduction__c</fullName>
        <label>扣税类别</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxFlingCountry__c</fullName>
        <label>报税国家/地区</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxncludedUnitPrice__c</fullName>
        <label>含税单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCurrencyPriceTax__c</fullName>
        <label>本币价税合计</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValidUntil__c</fullName>
        <label>有效期至</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dpzk__c</fullName>
        <label>单品折扣</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>model__c</fullName>
        <label>型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <label>单位</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>技术订单产品（备件）</label>
    <nameField>
        <displayFormat>JSDDCP-{YYYY}{MM}-{000000}</displayFormat>
        <label>技术订单产品名称</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>技术订单产品（备件）</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>